# MiniRenderer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  VS2019ConfigBuild.bat  VS2022Config.bat  VS2022ConfigBuild.bat
example/: example1_triangle.cpp  example2_cube.cpp  example3_blinphong.cpp
src/: MiniRenderer.cpp  MiniRenderer.h
src/component/: Camera.cpp  Camera.h  Light.cpp  Light.h  Material.h  Mesh.cpp  Mesh.h
src/core/: Base.h  Buffer.cpp  Buffer.h  Input.cpp  Input.h  Rasterizer.cpp  Rasterizer.h  Rasterizer.inl  Renderer.cpp  Renderer.h  Screen.cpp  Screen.h  Shader.cpp  Shader.h  Texture.h  Vertex.h
src/math/: Math.h
src/math/func/: Algorithm.h  Algorithm.inl  Func.h  Func.inl  Transform.h  Transform.inl
src/math/type/: Base.h  Complex.h  Complex.inl  Mat.h  Mat.inl  Mat_simd.inl  Quat.h  Quat.inl  Vec.h  Vec.inl  Vec_simd.inl
src/model/: Sphere.h
src/tool/: Deserializer.cpp  Deserializer.h  Profiler.cpp  Profiler.h  Time.cpp  Time.h
